gst/vaapi/gstvaapivideobufferpool.c
@@ -161,6 +161,27 @@ gst_vaapi_video_buffer_pool_set_config (GstBufferPool * pool,
     gst_object_replace ((GstObject **) & priv->allocator, NULL);
   priv->video_info = new_vip;
 
+  {
+    guint surface_alloc_flags;
+    gboolean vinfo_changed = FALSE;
+
+    if (allocator) {
+      const GstVideoInfo *alloc_vinfo =
+          gst_allocator_get_vaapi_video_info (allocator, &surface_alloc_flags);
+      vinfo_changed = gst_video_info_changed (alloc_vinfo, &new_vip);
+    }
+
+    if (vinfo_changed && allocator && priv->use_dmabuf_memory) {
+      gst_allocator_set_vaapi_video_info (allocator, &new_vip,
+          surface_alloc_flags);
+    } else if (!priv->use_dmabuf_memory && (vinfo_changed || !allocator)) {
+      /* let's destroy the other allocator and create a new one */
+      allocator = gst_vaapi_video_allocator_new (priv->display, &new_vip,
+          surface_alloc_flags, 0);
+      gst_buffer_pool_config_set_allocator (config, allocator, NULL);
+    }
+  }
+
   if (!gst_buffer_pool_config_has_option (config,
           GST_BUFFER_POOL_OPTION_VAAPI_VIDEO_META))
     goto error_no_vaapi_video_meta_option;
